--- a/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Login.form
+++ b/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Login.form
@@ -226,11 +226,11 @@
               </Events>
             </Component>
             <Component class="javax.swing.JPasswordField" name="JPFsenha1">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="jPasswordField1"/>
-              </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="JTFnomedousuario1">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JTFnomedousuario1ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="JLsenha1">
               <Properties>
@@ -251,7 +251,7 @@
             <Component class="javax.swing.JLabel" name="JLBmotoconnect1">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="D:\Users\grpereira\Desktop\Giampaolo_Projeto_TechNight\Giampaolo_Projeto_Technight\Giampaolo_Projeto_Technight\MotoConnect\src\main\java\imagem_login\motoqueiro.png"/>
+                  <Image iconType="2" name="C:\Users\PC\Desktop\MotoConnect_Projeto\Giampaolo_Projeto_Technight\MotoConnect\src\main\java\imagem_login\motoqueiro.png"/>
                 </Property>
               </Properties>
             </Component>
@@ -273,6 +273,9 @@
               <Dimension value="[115, 25]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JBTadministrador1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="JBLsair1">
         </Component>
@@ -309,6 +312,9 @@
               <Dimension value="[115, 25]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JBTatendente1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="JBTentregador1">
           <Properties>
