--- a/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Login.form
+++ b/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Login.form
@@ -230,6 +230,9 @@
               </Events>
             </Component>
             <Component class="javax.swing.JPasswordField" name="JPFsenha1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="123456"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="JTFnomedousuario1">
               <Properties>
